--- a/1.0_theDOM.html
+++ b/1.0_theDOM.html
@@ -17,10 +17,12 @@
 			<li id="worst">Rap except Eminem</li>
 			<li id="best">Pop(Chainsmokers, etc.), almost anything</li>
 		</ul>
-
+		
+		<!-- Button removes the music list when clicked on -->
 		<button onclick="removeList()">Remove Music List</button>
 
 		<h1>Click the button below</h1>
+		<!-- Click the button to add more buttons also -->
 		<button onclick="addButton()">Add a Button</button>
 
 		<ul id="myList">
@@ -29,7 +31,7 @@
 			<li>Juice</li>
 		</ul>
 		<button onclick="waterToWine()"> Turn Water to Wine</button>
-
+		<!-- Essentially just a whole bunch of buttons -->
 		<button onclick="writeWords()">Click to write to the DOM</button>
 
 		<script type="text/javascript" src="1.0_theDom.js"></script>
